bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value char
while (char getIndication()) {if (readMessage() == "R") {right();
       ^